| Bug #31045 | Error in compiling Falcon 6.0.0.2 alpha FreeBSD | ||
|---|---|---|---|
| Submitted: | 16 Sep 2007 0:21 | Modified: | 22 Nov 2007 11:19 |
| Reporter: | mirus Otec | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Falcon storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.0.2-alpha | OS: | FreeBSD |
| Assigned to: | Hakan Küçükyılmaz | CPU Architecture: | Any |
[16 Sep 2007 0:21]
mirus Otec
[16 Sep 2007 5:20]
Valeriy Kravchuk
Thank you for a problem report. What exact FreeBSD and gcc versions do you use?
[18 Sep 2007 5:28]
Hakan Küçükyılmaz
Mirus, thanks for the bug report. This is an open issue and I am working on it. Best regards, Hakan
[24 Sep 2007 10:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/34513 ChangeSet@1.2595, 2007-09-24 12:56:44+02:00, hakank@lu0011.wdf.sap.corp +6 -0 Compile fix for FreeBSD Bug#31045.
[26 Sep 2007 8:47]
Hakan Küçükyılmaz
Mirus, can you please test our latest version from BK? It should compile on FreeBSD now. http://mysql.bkbits.net:8080/mysql-6.0-falcon/ Best regards, Hakan
[15 Nov 2007 14:22]
mirus Otec
I have successfully installed it. Thank you!
[15 Nov 2007 14:24]
Hakan Küçükyılmaz
Falcon was not compiling on FreeBSD. Now it does.
[22 Nov 2007 11:19]
MC Brown
A note has been added to the 6.0.3. changelog: Falcon would fail to compile on FreeBSD. This limitation has now been fixed.
