Compile fix for FreeBSD Bug#31045.